Improvements to purity/ploidy estimation CANV-673 (#410)
* miscellaneous easy changes (#404)

* miscellaneous easy changes

* Add changes to make grid search finer-resolution and increase maximum ploidy (#405)

* CANV-673 scoring reorg (#407)

* modifications and reorganization to model scoring

* Canv 673 clustering (#408)

* add modified version of Accord framework MeanShift code
* modify clustering algorithm
* add LGPL to COPYRIGHT.txt for Accord libraries

* fix linq query

--- a/Src/Canvas/Canvas/Canvas.csproj
+++ b/Src/Canvas/Canvas/Canvas.csproj
@@ -24,6 +24,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" />
 
   <ItemGroup>
+    <Content Include="..\..\..\COPYRIGHT.txt" Link="COPYRIGHT.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CanvasBin\CanvasBin.csproj" />
     <ProjectReference Include="..\CanvasCommon\CanvasCommon.csproj" />
   </ItemGroup>
