Add EvaluateCNV_callability.txt (#415)

--- a/Tools/EvaluateCNV/EvaluateCNV.csproj
+++ b/Tools/EvaluateCNV/EvaluateCNV.csproj
@@ -27,8 +27,9 @@
 
   <ItemGroup>
     <PackageReference Include="Illumina.Common" Version="6.2.0.419" />
+    <PackageReference Include="Isas.Metrics" Version="1.3.7.129" />
     <PackageReference Include="Isas.Ploidy" Version="4.0.0.98" />
-    <PackageReference Include="Isas.SequencingFiles" Version="7.0.1.424" />
+    <PackageReference Include="Isas.SequencingFiles" Version="7.1.4.436" />
     <PackageReference Include="protobuf-net" Version="2.3.7" />
   </ItemGroup>
 
